feat: add signup component with routing and form css

--- a/chat-front/src/app/views/signup/signup.component.html
+++ b/chat-front/src/app/views/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div class="form-container">
-  <h2>Login</h2>
+  <h2>Sign up</h2>
   <form action="">
     <div class="input-container">
       <label for="">Username</label
@@ -8,10 +8,13 @@
     <div class="input-container">
       <label for="">Password</label><input type="password" />
     </div>
-    <button type="submit">Login</button>
+    <div class="input-container">
+      <label for="">Confirm Password</label><input type="password" />
+    </div>
+    <button type="submit">Sign up</button>
   </form>
   <div class="form-footer">
-    <span>Don't have an account yet ? </span>
-    <span class="link" routerLink="/signup">Sign up</span>
+    <span>Already have an account ? </span>
+    <span class="link" routerLink="/login">Login</span>
   </div>
 </div>
