--- a/chat-front/src/styles.css
+++ b/chat-front/src/styles.css
@@ -1,1 +1,29 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", serif;
+  color: var(--font-clr);
+}
+
+body {
+  --main-clr: #fa4032;
+  --secondary-clr: var(--bg-clr);
+  --contrast-clr: white;
+  --bg-clr: #262946;
+  --font-clr: var(--bg-clr);
+  background-color: var(--bg-clr);
+}
+
+button {
+  display: block;
+  height: 2rem;
+  min-width: 5rem;
+  border: none;
+  border-radius: 0.2rem;
+  font-size: 0.9rem;
+  font-weight: 500;
+  cursor: pointer;
+}
