feat: add login and signup functionality without api

--- a/chat-front/src/app/views/login/login.component.html
+++ b/chat-front/src/app/views/login/login.component.html
@@ -1,12 +1,17 @@
 <div class="form-container">
   <h2>Login</h2>
-  <form action="">
+  <form [formGroup]="loginForm" (ngSubmit)="login()">
     <div class="input-container">
       <label for="">Username</label
-      ><input type="text" placeholder="Exemple : xxDarkShadow" />
+      ><input
+        formControlName="username"
+        type="text"
+        placeholder="Exemple : xxDarkShadow"
+      />
     </div>
     <div class="input-container">
-      <label for="">Password</label><input type="password" />
+      <label for="">Password</label
+      ><input formControlName="password" type="password" />
     </div>
     <button type="submit">Login</button>
   </form>
