refactor: reorganize folders and modules

--- a/chat-front/src/app/views/login/login.component.html
+++ b/chat-front/src/app/views/login/login.component.html
@@ -6,8 +6,9 @@
       ><input
         formControlName="username"
         type="text"
-        placeholder="Exemple : xxDarkShadow"
+        placeholder="Exemple : enter your username"
       />
+      <div class="form-error"  *ngIf="isFieldInvalid('username')" >check field for errors</div>
     </div>
     <div class="input-container">
       <label for="">Password</label
