feat: add getFriends func

--- a/chat-front/src/app/views/home/home.component.html
+++ b/chat-front/src/app/views/home/home.component.html
@@ -1,1 +1,11 @@
-<p>home works!</p>
+<div>
+  <div>NAVBAR</div>
+  <div>
+    <div class="left">
+      <div class="friend" *ngFor="let item of chatRooms">
+        {{ item.friend_username }}
+      </div>
+    </div>
+    <div></div>
+  </div>
+</div>
