--- a/chat-front/src/app/views/signup/signup.component.html
+++ b/chat-front/src/app/views/signup/signup.component.html
@@ -17,7 +17,7 @@
       <label for="">Confirm Password</label
       ><input formControlName="passwordConfirm" type="password" />
     </div>
-    <button type="submit">Sign up</button>
+    <button type="submit" class="main-button">Sign up</button>
   </form>
   <div class="form-footer">
     <span>Already have an account ? </span>
