feat(sockets) : added friend requests

--- a/chat-front/src/app/views/home/home.component.html
+++ b/chat-front/src/app/views/home/home.component.html
@@ -23,7 +23,7 @@
             </div>
           </div>
         </div>
-        <button class="main-button">Send Request</button>
+        <button class="main-button" (click)="sendRequest($event)">Send Request</button>
       </form>
       <button (click)="signOff()">Sign off</button>
     </div>
