--- a/chat-front/src/app/views/home/home.component.html
+++ b/chat-front/src/app/views/home/home.component.html
@@ -17,13 +17,18 @@
             <div
               class="search-result"
               *ngFor="let item of searchResult"
-              (click)="selectUser(item)"
+              (click)="selectUser(item.username)"
             >
-              <p>{{ item.username }}</p>
+              {{ item.username }}
             </div>
           </div>
         </div>
-        <button class="main-button" (click)="sendRequest($event)">Send Request</button>
+        <button
+          class="main-button"
+          (click)="sendRequest($event, SearchInput.value)"
+        >
+          Send Request
+        </button>
       </form>
       <button (click)="signOff()">Sign off</button>
     </div>
@@ -51,9 +56,23 @@
         >
           {{ item.content }}
         </div>
+        <div
+          class="message receive"
+          *ngIf="usersTyping[getFriendUserName()] === true"
+        >
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+        </div>
+        <div id="anchor">.</div>
       </div>
       <form action="">
-        <input type="text" #MessageInput placeholder="Insert your message" />
+        <input
+          type="text"
+          #MessageInput
+          placeholder="Insert your message"
+          (keyup)="sendIsTyping(MessageInput.value)"
+        />
         <button (click)="send($event, MessageInput.value)">Send message</button>
       </form>
     </div>
